objects/hoopla__Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>hoopla__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hoopla__Field_Type__c</fullName>
        <label>Field Type</label>
        <length>124</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hoopla__Full_Name__c</fullName>
        <externalId>true</externalId>
        <label>Full Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hoopla__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Field</label>
</CustomObject>